--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -17,6 +17,7 @@ Parameters:
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
+  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
 
 Outputs:
   UserPoolId:
@@ -131,7 +132,7 @@ Resources:
         # To customize the From field, we have to provide the ARN of an SES account
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html
         EmailSendingAccount: COGNITO_DEFAULT
-        ReplyToEmailAddress: !Ref ReplyToEmail
+        ReplyToEmailAddress: !If [isHMSAccount, "alex_pickering@hms.harvard.edu", "hello@biomage.net"]
       EnabledMfas:
         - SMS_MFA
         - SOFTWARE_TOKEN_MFA
