--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -10,13 +10,10 @@ Parameters:
       - staging
       - production
     Description: The environment for which the buckets need to be created.
-  ReplyToEmail:
-    Type: String
-    Default: hello@biomage.net
-    Description: The email users reply registration message to
 
 Conditions:
   isProd: !Equals [!Ref Environment, "production"]
+  isHMSAccount: !Equals [ !Ref AWS::AccountId, "160782110667"]
 
 Outputs:
   UserPoolId:
@@ -131,7 +128,7 @@ Resources:
         # To customize the From field, we have to provide the ARN of an SES account
         # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cognito-userpool-emailconfiguration.html
         EmailSendingAccount: COGNITO_DEFAULT
-        ReplyToEmailAddress: !Ref ReplyToEmail
+        ReplyToEmailAddress: !If [isHMSAccount, "alex_pickering@hms.harvard.edu", "hello@biomage.net"]
       EnabledMfas:
         - SMS_MFA
         - SOFTWARE_TOKEN_MFA
