--- a/migrations/sql-migrations/package.json
+++ b/migrations/sql-migrations/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1087.0",
+    "cognito-backup-restore": "^1.3.2",
     "crypto-js": "^4.1.1",
     "knex": "^1.0.3",
+    "minimist": "^1.2.6",
     "object-hash": "^2.0.3",
     "pg": "^8.7.3",
     "uuidv4": "^6.2.12"
