--- a/migrations/sql-migrations/package.json
+++ b/migrations/sql-migrations/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dynamoToSql": "node dynamoToSql/run"
+    "dynamoToSql": "node dynamoToSql/run",
+    "awsToAws": "node awsToAws/run"
   },
   "author": "",
   "license": "ISC",
