--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -10,7 +10,7 @@ on:
         description: 'The sandbox ID to deploy under'
         required: true
         type: string
-      with-rds:test
+      with-rds:
         description: 'Stage a new RDS instance'
         required: false
         default: 'False'
