--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -372,7 +372,7 @@ jobs:
             GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
           fi
 
-          echo $GIT_URL
+          echo "Github URL: $GIT_URL"
 
           helm upgrade flux fluxcd/flux \
             --set git.url=$GIT_URL \
