--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -60,7 +60,7 @@ Resources:
         SecretStringTemplate: '{"username": "postgres"}'
         GenerateStringKey: password
         PasswordLength: 32
-        ExcludeCharacters: "/@\"'\\!#$%&()*+,-.:;<=>?[]^_`{|}~ "
+        ExcludeCharacters: "$`\\"
         IncludeSpace: false
 
   RDSInvokeLambdaRole:
