--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -60,7 +60,7 @@ Resources:
         SecretStringTemplate: '{"username": "postgres"}'
         GenerateStringKey: password
         PasswordLength: 16
-        ExcludeCharacters: "$`\\'\""
+        ExcludeCharacters: "$`\\'\"/@"
         IncludeSpace: false
 
   RDSInvokeLambdaRole:
