--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -110,6 +110,7 @@ Resources:
           Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"
         VpcSecurityGroupIds:
           Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::ClusterSecurityGroupId"
+      RotateImmediatelyOnUpdate: false
       RotationRules:
         Duration: 2h
         ScheduleExpression: 'cron(0 8 1 * ? *)'
